<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5DCFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Information"
    tools:showIn="@layout/activity_information">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="300dp"
        android:layout_height="95dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="464dp"
        android:contentDescription="@string/txtTitle"
        android:text="@string/txtTitle"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgLogo2"
        android:layout_width="303dp"
        android:layout_height="240dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spc" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/txtAddress"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="113dp"
        android:contentDescription="@string/txtPhone"
        android:text="@string/txtPhone"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>